--- a/pocketbase/docker-compose.yml
+++ b/pocketbase/docker-compose.yml
@@ -8,9 +8,18 @@ services:
       target: dev
     volumes:
       - ./app/src:/app/src
-      - ./app/.svelte-kit/:/app/.svelte-kit
+      - ./app/.svelte-kit:/app/.svelte-kit
+      - ./app/static:/app/static
+      - ./app/vite.config.ts:/app/vite.config.ts
+      - ./app/tsconfig.json:/app/tsconfig.json
+      - ./app/svelte.config.js:/app/svelte.config.js
+      - ./app/tailwind.config.js:/app/tailwind.config.js
+      - ./app/postcss.config.js:/app/postcss.config.js
+      - ./app/.env:/app/.env
+      - /app/node_modules
     ports:
       - 3000:3000
+    command: npm run dev
 
   pb:
     container_name: svelte-auth-pocketbase
